--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=dev-width, initial-scale=1.0" />
-    <title>Pitipaw</title>
+    <title>El-RingsaEsthetic</title>
     <link rel="shortcut icon" type="image" href="./img/logobetul.png" />
     <link rel="stylesheet" href="style.css" />
 
@@ -134,11 +134,10 @@
         <!-- home section -->
         <div id="home" class="home">
             <div class="content" data-aos="zoom-out-right">
-                <h3>Pitipaw <br />Handmade Crafting</h3>
+                <h3>El-RingsaEsthetic<br />Handmade Crafting</h3>
                 <h2>Category <span class="changecontent"></span></h2>
                 <p>
-                    Cutom warna sesuka hatimu (❁´◡`❁)
-                    <br />Detail produk ada di bawah.
+                    Detail produk ada di bawah.
                 </p>
                 <!-- <a href="#" class="btn">Order Now</a> -->
             </div>
