--- a/index.html
+++ b/index.html
@@ -88,7 +88,56 @@
         <div class="row">
             <div class="col-md-12">
                 <h2>Our Products</h2>
-                <div id="products" class="row mt-4"></div>
+                <div id="products" class="row mt-4">
+                    <!-- Product Card 1 -->
+                    <div class="col-md-3 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/cutie_keychain.jpg" class="card-img-top product-image" alt="Cutie Keychain">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant Cutie</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product Card 2 -->
+                    <div class="col-md-3 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/nct_keychain.jpg" class="card-img-top product-image" alt="NCT Keychain">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant NCT</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product Card 3 -->
+                    <div class="col-md-3 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/bee_keychain.jpg" class="card-img-top product-image" alt="Bee Keychain">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant Bee</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Product Card 4 -->
+                    <div class="col-md-3 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/pinky_white_keychain.jpg" class="card-img-top product-image" alt="Pinky White Keychain">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant Pinky White</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
