--- a/index.html
+++ b/index.html
@@ -89,51 +89,171 @@
             <div class="col-md-12">
                 <h2>Our Products</h2>
                 <div id="products" class="row mt-4">
-                    <!-- Product Card 1 -->
-                    <div class="col-md-3 mb-4">
+                    <!-- Row 1 -->
+                    <div class="product-col-1-of-5 mb-4">
                         <div class="card product-card">
-                            <img src="placeholder/cutie_keychain.jpg" class="card-img-top product-image" alt="Cutie Keychain">
+                            <img src="placeholder/keychain_1.jpg" class="card-img-top product-image" alt="Product 1">
                             <div class="card-body product-card-body">
                                 <h5 class="card-title">Keychain</h5>
-                                <p class="card-text product-variant">Variant Cutie</p>
+                                <p class="card-text product-variant">Variant 1</p>
                                 <p class="card-text product-price">IDR 15K</p>
-                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Product Card 2 -->
-                    <div class="col-md-3 mb-4">
+                    <div class="product-col-1-of-5 mb-4">
                         <div class="card product-card">
-                            <img src="placeholder/nct_keychain.jpg" class="card-img-top product-image" alt="NCT Keychain">
+                            <img src="placeholder/keychain_2.jpg" class="card-img-top product-image" alt="Product 2">
                             <div class="card-body product-card-body">
                                 <h5 class="card-title">Keychain</h5>
-                                <p class="card-text product-variant">Variant NCT</p>
+                                <p class="card-text product-variant">Variant 2</p>
                                 <p class="card-text product-price">IDR 15K</p>
-                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Product Card 3 -->
-                    <div class="col-md-3 mb-4">
+                    <div class="product-col-1-of-5 mb-4">
                         <div class="card product-card">
-                            <img src="placeholder/bee_keychain.jpg" class="card-img-top product-image" alt="Bee Keychain">
+                            <img src="placeholder/keychain_3.jpg" class="card-img-top product-image" alt="Product 3">
                             <div class="card-body product-card-body">
                                 <h5 class="card-title">Keychain</h5>
-                                <p class="card-text product-variant">Variant Bee</p>
+                                <p class="card-text product-variant">Variant 3</p>
                                 <p class="card-text product-price">IDR 15K</p>
-                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
                             </div>
                         </div>
                     </div>
-                    <!-- Product Card 4 -->
-                    <div class="col-md-3 mb-4">
+                    <div class="product-col-1-of-5 mb-4">
                         <div class="card product-card">
-                            <img src="placeholder/pinky_white_keychain.jpg" class="card-img-top product-image" alt="Pinky White Keychain">
+                            <img src="placeholder/keychain_4.jpg" class="card-img-top product-image" alt="Product 4">
                             <div class="card-body product-card-body">
                                 <h5 class="card-title">Keychain</h5>
-                                <p class="card-text product-variant">Variant Pinky White</p>
+                                <p class="card-text product-variant">Variant 4</p>
                                 <p class="card-text product-price">IDR 15K</p>
-                                <a href="#" class="btn btn-primary add-to-cart-btn">Add Cart</a>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_5.jpg" class="card-img-top product-image" alt="Product 5">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 5</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Row 2 -->
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_6.jpg" class="card-img-top product-image" alt="Product 6">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 6</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_7.jpg" class="card-img-top product-image" alt="Product 7">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 7</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_8.jpg" class="card-img-top product-image" alt="Product 8">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 8</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_9.jpg" class="card-img-top product-image" alt="Product 9">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 9</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_10.jpg" class="card-img-top product-image" alt="Product 10">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 10</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Row 3 -->
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_11.jpg" class="card-img-top product-image" alt="Product 11">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 11</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_12.jpg" class="card-img-top product-image" alt="Product 12">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 12</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_13.jpg" class="card-img-top product-image" alt="Product 13">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 13</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_14.jpg" class="card-img-top product-image" alt="Product 14">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 14</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-col-1-of-5 mb-4">
+                        <div class="card product-card">
+                            <img src="placeholder/keychain_15.jpg" class="card-img-top product-image" alt="Product 15">
+                            <div class="card-body product-card-body">
+                                <h5 class="card-title">Keychain</h5>
+                                <p class="card-text product-variant">Variant 15</p>
+                                <p class="card-text product-price">IDR 15K</p>
+                                <a href="#" class="add-to-cart-btn">Add Cart</a>
                             </div>
                         </div>
                     </div>
