--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- google analytics -->
     
-    
+
     <!-- google analytics -->
 
   </head>
@@ -67,7 +67,7 @@
         <!-- Brand -->
         <a class="navbar-brand" href="#" id="logo"
           ><img
-            src="./img/Logo Staight Piti.png"
+            src="logo.png"
             alt=""
             width="100px"
             height="auto"
