--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ shopping_cart
 
             <div class="bag3">
               <h1>Lokasi Kami</h1>
-              <p>Puri Cipageran 1, Kota Cimahi, Jawa Barat 40511</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam voluptate non voluptates mollitia, quas eius quaerat aut quasi aliquid corrupti adipisci ex consequuntur provident magnam temporibus corporis similique aliquam commodi!</p>
             </div>
           </div>
         </div>
