--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@ shopping_cart
               <div class="logo5">
                 <div class="ig">
                   <a
-                    href="https://www.instagram.com/pitipaw_craft/?utm_source=ig_web_button_share_sheet"
+                    href="https://www.instagram.com/el.ringsaesthetic/?utm_source=ig_web_button_share_sheet"
                     target="_blank"
                   >
                     <img
