--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/nct.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
