--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ shopping_cart
       <!-- top cards end -->
 
       <!-- banner -->
-      <div class="banner" data-aos="fade-up" data-aos-duration="1500">
+      <!-- <div class="banner" data-aos="fade-up" data-aos-duration="1500">
         <div class="content">
           <h3>Lanyard</h3>
           <h2>UP TO 50% OFF</h2>
@@ -209,9 +209,9 @@ shopping_cart
             Lanyard phone adalah tali gantungan ponsel yang dapat digunakan
             untuk menggantungkan ponsel agar tetap aman dan mudah diambil. for
             all type of phone
-          </p>
+          </p> ini-->
           <!-- <div id="btnorder"><button>Order Now</button></div> -->
-        </div>
+        <!-- </div>
         <div class="img">
           <img
             src="./img/lanyard no bg.png"
@@ -220,7 +220,7 @@ shopping_cart
             height="auto"
           />
         </div>
-      </div>
+      </div> ini--> 
       <!-- banner end -->
 
       <!-- product cards -->
