--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/ct.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
@@ -341,7 +341,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/bee.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
@@ -385,7 +385,7 @@ shopping_cart
                     <i><img src="./img/add.png" alt="" width="30px" /></i>
                   </button>
                 </div>
-                <img src="./img/pw.png" alt="" />
+                <img src="1.png" alt="" />
                 <div class="card-body">
                   <h3>Keychain</h3>
                   <div class="star">
