--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@ shopping_cart
         <p class="text-center">Variantelit. Vitae, accusantium.</p>
         <div class="icons text-center">
           <a
-            href="https://www.instagram.com/pitipaw_craft/?utm_source=ig_web_button_share_sheet"
+            href="https://www.instagram.com/el.ringsaesthetic/"
             target="_blank"
           >
             <i class="bx bxl-instagram"></i>
