--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=dev-width, initial-scale=1.0" />
-    <title>Pitipaw</title>
+    <title>el.ringsaesthetic</title>
     <link rel="shortcut icon" type="image" href="./img/logobetul.png" />
     <link rel="stylesheet" href="style.css" />
     
@@ -159,7 +159,7 @@ shopping_cart
       <!-- home section -->
       <div id="home" class="home">
         <div class="content" data-aos="zoom-out-right">
-          <h3>Pitipaw <br />Handmade Crafting</h3>
+          <h3>el.ringsaesthetic <br />Handmade Crafting</h3>
           <h2>Category <span class="changecontent"></span></h2>
           <p>
             Cutom warna sesuka hatimu (❁´◡`❁)
@@ -877,7 +877,7 @@ shopping_cart
       <!-- footer -->
       <div class="footerke2">
       <footer id="footer2" data-aos="fade-up" data-aos-duration="1500">
-        <h1 class="text-center">Pitipaw</h1>
+        <h1 class="text-center">el.ringsaesthetic</h1>
         <p class="text-center">Variantelit. Vitae, accusantium.</p>
         <div class="icons text-center">
           <a
